The Latest Stable Version is 0.9.7.51
The Latest Development Version is 0.9.7.52

Version 0.9.7.52
	* Improvements about UI
	* A Lot of minor fixs
	* Rearrange preferences dialog.
	* Update German, French and Traditional Chinese translations

Version 0.9.7.51
	* Fix: cannot remember the columns state (issue #174).
	* Allow to save search result in Hotot (issue #52, #13)

Version 0.9.7.50
	* Allow to sort columns manually (issue #113, #97).
	* Allow to add/close all columns.

Version 0.9.7.49
	* Fix: name not highlighted if it's following a char (issue #119).
	* Fix: keep track identi.ca conversations (issue #48).
	* Change the keybinding to invoke finder (form '/' to 'ff') (issue #42).
	* Fix something about keysyms (Gir).
	* Fix some icons problem in Qt version.
	* Fix unconsidered copy-n-paste (Gtk/Gir).
	* Fix: keyboard focus not working properly (issue #131).
	* Workaround for libsoup runtime (Gtk/Gir).

Version 0.9.7.48
  * Auto sign in (GTK and Qt).
	* Starts minimized (GTK and Qt).
	* Chrome fix (correct layout in Chrome 19.0.1068.1).

Version 0.9.7.47
  * New welcome page.
	* Auto arrange the order of profiles.
	* Use account avatar as profile avatar.

Version 0.9.7.46
  * Image uploader fixes.
  * New option for delete mark.

Version 0.9.7.45
  * Now KDE/GTK can be built at the same time.
  * Translation update. New Polish Translation.
  * Add more keyboard shortcuts.
  * DM box now show recipient.
  * Quote tweet calculate remaining chars correctly now.
  * Documentation & Help update
  * Auto Sign in.
  * Universal image uploader for gir(gtk) and Chrome edition.

Version 0.9.7.44
  * Improve accuracy of Speech Input for Chrome edition.

Version 0.9.7.43
  * Speech Input for Chrome edition.

Version 0.9.7.42
  * Minor Style & CSS Fix
  * Fix Qt edition. enables KDE but not run under it.
  * Introduce "deleted tweet" style.
  * Deutsch Translation.
  * No Official 0.9.7.41 release. they forgot.

Version 0.9.7.40