@@ -1441,6 +1441,24 @@ along with this program. If not, see <a target="_blank" href="http://www.gnu.org
     </div><!-- END of .dialog_container -->
 </div>
 
+<!-- ImagePreview dialog -->
+<div id="imagepreview_dlg" class="dialog">
+    <div class="dialog_bar">
+        <h2 class="dialog_title" data-i18n-text="preview">Preview</h2>
+        <a class="dialog_close_btn" title="Close" href="javascript:void(0);"></a>
+    </div>
+    <div class="dialog_container">
+    <div class="dialog_header"></div>
+		<div class="dialog_body">
+			<img class="preview" src="http://img.ly/show/full/3de"/>
+    </div>
+    <div class="dialog_footer">
+    <a class="button orig_btn" target="_blank" data-i18n-text="view_original" href="">View Original</a>
+    <a class="button dialog_close_btn" data-i18n-text="close">Close</a>
+    </div>
+    </div><!-- END of .dialog_container -->
+</div><!-- END of #imagepreview_dlg-->
+
 <!-- Error dialog -->
 <div id="error_dlg" class="dialog">
     <div class="dialog_bar">
